--- a/a/s2026781201.html
+++ b/a/s2026781201.html
@@ -300,7 +300,7 @@
 										<a href="https://solav.me/p/s2026781201.pdf" target="_blank" class="btn btn-sm btn-primary">
 											<i class="bi bi-file-earmark-pdf me-1"></i> Download PDF
 										</a>
-										<button id="citeBtn" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#citationModal">
+										<button id="citeBtn" class="btn btn-sm btn-outline-primary">
 											<i class="bi bi-quote me-1"></i> Cite This Article
 										</button>
 										<small class="text-muted text-xs mt-2"><i class="bi bi-info-circle"></i> This DOI is provided for long-term preservation and open archiving.</small>
@@ -527,25 +527,37 @@
 			<div class="modal-dialog modal-dialog-centered">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title"><i class="bi bi-quote me-2"></i>Citation</h5>
+						<h5 class="modal-title"><i class="bi bi-quote me-2"></i>Cite this article</h5>
 						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 					</div>
 					<div class="modal-body">
 						<div class="mb-3">
-							<label class="form-label">APA Format</label>
-							<div id="apaCitation" class="citation-box border border-opacity-10">
-								
-								Baker, Maher Asaad 2(2026). Advancing Open, Ethical, and Interdisciplinary Scholarship: Reflections on Volume One and a Call for Contributions to Volume Two (2026). SOLAV Journal, 1-6. https://solav.me/a/s2026781201
-							</div>
+							<label for="citationStyleSelect" class="form-label fw-bold">Citation style</label>
+							<select id="citationStyleSelect" class="form-select">
+								<option value="apa" selected>APA 7th</option>
+								<option value="mla">MLA 9th</option>
+								<option value="chicago">Chicago 17th (author-date)</option>
+								<option value="ieee">IEEE</option>
+								<option value="bibtex">BibTeX</option>
+								<option value="ris">RIS (EndNote/Zotero)</option>
+							</select>
 						</div>
+						<div id="citationContent" class="border rounded p-3 bg-light" style="font-size: 0.9rem; white-space: pre-wrap;"></div>
 					</div>
-					<div class="modal-footer">
-						<button id="copyApaBtn" class="btn btn-primary">
-							<i class="bi bi-clipboard me-1"></i> Copy APA
-						</button>
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-							Close
-						</button>
+					<div class="modal-footer d-flex justify-content-between">
+						<div>
+							<button id="downloadCitationBtn" class="btn btn-outline-primary">
+								<i class="bi bi-download me-1"></i> Download
+							</button>
+							</div>
+							<div>
+							<button id="copyCitationBtn" class="btn btn-primary">
+								<i class="bi bi-clipboard me-1"></i> Copy
+							</button>
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+								Close
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -555,54 +567,285 @@
 		<script src="/js/swiper.js"></script>
 		<script src="/js/js.js"></script>
 		<script>
+			let currentArticle = null;
+			let currentStyle = 'apa';
+
+			function getInitials(firstName) {
+				return firstName.split(' ').map(part => part.charAt(0).toUpperCase() + '.').join(' ');
+			}
+
+			function generateAPA(article) {
+				const authors = article.authors;
+				const year = article.published_date ? new Date(article.published_date).getFullYear() : 'n.d.';
+				const title = article.title;
+				const journal = '<em>SOLAV Journal</em>';
+				const volume = article.volume;
+				const pages = article.pages || 'n. pag.';
+				const url = `https://solav.me/a/${article.id}`;
+
+				let authorStr = '';
+				if (authors.length === 1) {
+					const a = authors[0];
+					authorStr = `${a.name_last}, ${getInitials(a.name_first)}`;
+				} else if (authors.length === 2) {
+					const a1 = authors[0];
+					const a2 = authors[1];
+					authorStr = `${a1.name_last}, ${getInitials(a1.name_first)} & ${a2.name_last}, ${getInitials(a2.name_first)}`;
+				} else if (authors.length > 2) {
+					const a1 = authors[0];
+					authorStr = `${a1.name_last}, ${getInitials(a1.name_first)} et al.`;
+				}
+
+				const html = `${authorStr} (${year}). ${title}. ${journal}, ${volume}, ${pages}. ${url}`;
+				const text = html.replace(/<em>|<\/em>/g, '');
+				return { html, text };
+			}
+
+			function generateMLA(article) {
+				const authors = article.authors;
+				const year = article.published_date ? new Date(article.published_date).getFullYear() : 'n.d.';
+				const title = article.title;
+				const journal = 'SOLAV Journal';
+				const volume = article.volume;
+				const pages = article.pages || 'n. pag.';
+				const url = `https://solav.me/a/${article.id}`;
+
+				let authorStr = '';
+				if (authors.length === 1) {
+					const a = authors[0];
+					authorStr = `${a.name_last}, ${a.name_first}`;
+				} else if (authors.length === 2) {
+					const a1 = authors[0];
+					const a2 = authors[1];
+					authorStr = `${a1.name_last}, ${a1.name_first} and ${a2.name_first} ${a2.name_last}`;
+				} else if (authors.length > 2) {
+					const a1 = authors[0];
+					authorStr = `${a1.name_last}, ${a1.name_first} et al.`;
+				}
+
+				const html = `${authorStr} "${title}" <em>${journal}</em>, vol. ${volume}, ${year}, pp. ${pages}. ${url}.`;
+				const text = html.replace(/<em>|<\/em>/g, '');
+				return { html, text };
+			}
+
+			function generateChicago(article) {
+				const authors = article.authors;
+				const year = article.published_date ? new Date(article.published_date).getFullYear() : 'n.d.';
+				const title = article.title;
+				const journal = 'SOLAV Journal';
+				const volume = article.volume;
+				const pages = article.pages || 'n. pag.';
+				const url = `https://solav.me/a/${article.id}`;
+
+				let authorStr = '';
+				if (authors.length === 1) {
+					const a = authors[0];
+					authorStr = `${a.name_last}, ${a.name_first}`;
+				} else if (authors.length === 2) {
+					const a1 = authors[0];
+					const a2 = authors[1];
+					authorStr = `${a1.name_last}, ${a1.name_first} and ${a2.name_first} ${a2.name_last}`;
+				} else if (authors.length > 2) {
+					const a1 = authors[0];
+					authorStr = `${a1.name_last}, ${a1.name_first} et al.`;
+				}
+
+				const html = `${authorStr} ${year}. "${title}" <em>${journal}</em> ${volume}: ${pages}. ${url}.`;
+				const text = html.replace(/<em>|<\/em>/g, '');
+				return { html, text };
+			}
+
+			function generateIEEE(article) {
+				const authors = article.authors;
+				const year = article.published_date ? new Date(article.published_date).getFullYear() : 'n.d.';
+				const month = article.published_date ? new Date(article.published_date).toLocaleString('default', { month: 'short' }) : 'n.d.';
+				const title = article.title;
+				const journal = 'SOLAV Journal';
+				const volume = article.volume;
+				const pages = article.pages || 'n. pag.';
+				const url = `https://solav.me/a/${article.id}`;
+
+				let authorStr = '';
+				if (authors.length === 1) {
+					const a = authors[0];
+					authorStr = `${getInitials(a.name_first)} ${a.name_last}`;
+				} else if (authors.length === 2) {
+					const a1 = authors[0];
+					const a2 = authors[1];
+					authorStr = `${getInitials(a1.name_first)} ${a1.name_last} and ${getInitials(a2.name_first)} ${a2.name_last}`;
+				} else if (authors.length > 2) {
+					const a1 = authors[0];
+					authorStr = `${getInitials(a1.name_first)} ${a1.name_last} et al.`;
+				}
+
+				const html = `${authorStr}, "${title}" <em>${journal}</em>, vol. ${volume}, no. ?, pp. ${pages}, ${month} ${year}. ${url}`;
+				const text = html.replace(/<em>|<\/em>/g, '');
+				return { html, text };
+			}
+
+			function generateBibTeX(article) {
+				const authors = article.authors;
+				const year = article.published_date ? new Date(article.published_date).getFullYear() : 'n.d.';
+				const title = article.title;
+				const journal = 'SOLAV Journal';
+				const volume = article.volume;
+				const pages = article.pages || '';
+				const doi = article.identifiers?.archive_doi;
+				const url = `https://solav.me/a/${article.id}`;
+				const key = authors[0]?.name_last.toLowerCase() + year + article.id.slice(-4);
+
+				let authorBib = authors.map(a => `${a.name_last}, ${a.name_first}`).join(' and ');
+
+				let bib = `@article{${key},\n  title = {${title}},\n  author = {${authorBib}},\n  journal = {${journal}},\n  volume = {${volume}},\n  year = {${year}},\n  pages = {${pages}},\n  url = {${url}},\n`;
+				if (doi) bib += `  doi = {${doi}},\n`;
+				bib += `}`;
+
+				return { html: `<pre>${bib}</pre>`, text: bib };
+			}
+
+			function generateRIS(article) {
+				const authors = article.authors;
+				const year = article.published_date ? new Date(article.published_date).getFullYear() : 'n.d.';
+				const title = article.title;
+				const journal = 'SOLAV Journal';
+				const volume = article.volume;
+				const pages = article.pages || '';
+				const doi = article.identifiers?.archive_doi;
+				const url = `https://solav.me/a/${article.id}`;
+
+				let ris = `TY  - JOUR\n`;
+				authors.forEach(a => {
+					ris += `AU  - ${a.name_last}, ${a.name_first}\n`;
+				});
+				ris += `PY  - ${year}\n`;
+				ris += `TI  - ${title}\n`;
+				ris += `T2  - ${journal}\n`;
+				ris += `VL  - ${volume}\n`;
+				if (pages) ris += `SP  - ${pages.split('-')[0]}\n`;
+				if (pages && pages.includes('-')) ris += `EP  - ${pages.split('-')[1]}\n`;
+				if (doi) ris += `DO  - ${doi}\n`;
+				ris += `UR  - ${url}\n`;
+				ris += `ER  - \n`;
+
+				return { html: `<pre>${ris}</pre>`, text: ris };
+			}
+
+			function updateCitationDisplay() {
+				if (!currentArticle) return;
+
+				let result;
+				switch (currentStyle) {
+					case 'apa': result = generateAPA(currentArticle); break;
+					case 'mla': result = generateMLA(currentArticle); break;
+					case 'chicago': result = generateChicago(currentArticle); break;
+					case 'ieee': result = generateIEEE(currentArticle); break;
+					case 'bibtex': result = generateBibTeX(currentArticle); break;
+					case 'ris': result = generateRIS(currentArticle); break;
+					default: result = generateAPA(currentArticle);
+				}
+
+				document.getElementById('citationContent').innerHTML = result.html;
+				window.currentCitationText = result.text;
+			}
+
+			function showCitationModal() {
+				if (!currentArticle) {
+					console.error('Article data not loaded yet.');
+					return;
+				}
+				currentStyle = document.getElementById('citationStyleSelect').value;
+				updateCitationDisplay();
+
+				const modalEl = document.getElementById('citationModal');
+				const modal = bootstrap.Modal.getOrCreateInstance(modalEl);
+				modal.show();
+			}
+
+			async function loadArticleData() {
+				try {
+					const jsonUrl = '/a/s2025781101.json';
+					const response = await fetch(jsonUrl);
+					if (!response.ok) throw new Error('Failed to load article data');
+
+					const data = await response.json();
+					currentArticle = data.articles[0];
+
+				} catch (error) {
+					console.error('Error loading article data:', error);
+				}
+			}
+
 			document.addEventListener('DOMContentLoaded', function() {
+				loadArticleData();
 				document.getElementById('currentYear').textContent = new Date().getFullYear();
-				const copyApaBtn = document.getElementById('copyApaBtn');
-				if (copyApaBtn) {
-					copyApaBtn.addEventListener('click', function() {
-						const apaText = document.getElementById('apaCitation')?.textContent;
-						
-						if (apaText) {
-							if (navigator.clipboard && navigator.clipboard.writeText) {
-								navigator.clipboard.writeText(apaText).then(() => {
-									updateButtonState(this);
-								}).catch(err => {
-									console.error('Modern copy failed', err);
-								});
-							} else {
-								const textArea = document.createElement("textarea");
-								textArea.value = apaText;
-								document.body.appendChild(textArea);
-								textArea.select();
-								try {
-									document.execCommand('copy');
-									updateButtonState(this);
-								} catch (err) {
-									console.error('Fallback copy failed', err);
-								}
-								document.body.removeChild(textArea);
-							}
-						}
+				const citeBtn = document.getElementById('citeBtn');
+				if (citeBtn) {
+					citeBtn.addEventListener('click', showCitationModal);
+				}
+
+				const styleSelect = document.getElementById('citationStyleSelect');
+				if (styleSelect) {
+					styleSelect.addEventListener('change', (e) => {
+						currentStyle = e.target.value;
+						updateCitationDisplay();
 					});
 				}
 
-				function updateButtonState(btn) {
-					const original = btn.innerHTML;
-					btn.innerHTML = '<i class="bi bi-check me-1"></i> Copied!';
-					setTimeout(() => {
-						btn.innerHTML = original;
-					}, 2000);
+				const copyBtn = document.getElementById('copyCitationBtn');
+				if (copyBtn) {
+					copyBtn.addEventListener('click', () => {
+						if (!window.currentCitationText) return;
+						navigator.clipboard.writeText(window.currentCitationText).then(() => {
+							const original = copyBtn.innerHTML;
+							copyBtn.innerHTML = '<i class="bi bi-check me-1"></i> Copied!';
+							setTimeout(() => {
+								copyBtn.innerHTML = original;
+							}, 1500);
+						});
+					});
 				}
-				(() => {
+
+				const downloadBtn = document.getElementById('downloadCitationBtn');
+				if (downloadBtn) {
+					downloadBtn.addEventListener('click', () => {
+						if (!window.currentCitationText || !currentArticle) return;
+
+						let filename = `citation-${currentArticle.id}`;
+						let extension = 'txt';
+						switch (currentStyle) {
+							case 'bibtex': extension = 'bib'; break;
+							case 'ris': extension = 'ris'; break;
+							default: extension = 'txt';
+						}
+
+						const blob = new Blob([window.currentCitationText], { type: 'text/plain' });
+						const url = URL.createObjectURL(blob);
+						const a = document.createElement('a');
+						a.href = url;
+						a.download = `${filename}.${extension}`;
+						document.body.appendChild(a);
+						a.click();
+						document.body.removeChild(a);
+						URL.revokeObjectURL(url);
+					});
+				}
+
+				const modalEl = document.getElementById('citationModal');
+				if (modalEl) {
+					modalEl.addEventListener('hidden.bs.modal', () => {
+						currentStyle = 'apa';
+						styleSelect.value = 'apa';
+						if (currentArticle) updateCitationDisplay();
+					});
+				}
+
+				(function() {
 					'use strict';
 					const getStoredTheme = () => localStorage.getItem('theme');
 					const setStoredTheme = theme => localStorage.setItem('theme', theme);
 					const getPreferredTheme = () => {
 						const storedTheme = getStoredTheme();
-						if (storedTheme) {
-							return storedTheme;
-						}
-						return 'light';
+						return storedTheme || 'light';
 					};
 					const setTheme = theme => {
 						if (theme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
@@ -622,11 +865,7 @@
 						const themeSwitcher = document.querySelector('[data-bs-toggle="mode"]');
 						if (!themeSwitcher) return;
 						const themeSwitcherCheck = themeSwitcher.querySelector('input[type="checkbox"]');
-						if (theme === 'dark') {
-							themeSwitcherCheck.checked = true;
-						} else {
-							themeSwitcherCheck.checked = false;
-						}
+						themeSwitcherCheck.checked = (theme === 'dark');
 						updateLogos(theme);
 					};
 					window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
@@ -637,20 +876,19 @@
 							showActiveTheme(newTheme);
 						}
 					});
-					window.addEventListener('DOMContentLoaded', () => {
-						showActiveTheme(getPreferredTheme());
-						document.querySelectorAll('[data-bs-toggle="mode"]').forEach(toggle => {
-							toggle.addEventListener('click', () => {
-								const themeSwitcherCheck = toggle.querySelector('input[type="checkbox"]');
-								const theme = themeSwitcherCheck.checked ? 'dark' : 'light';
-								setStoredTheme(theme);
-								setTheme(theme);
-								showActiveTheme(theme);
-							});
+					showActiveTheme(getPreferredTheme());
+					document.querySelectorAll('[data-bs-toggle="mode"]').forEach(toggle => {
+						toggle.addEventListener('click', () => {
+							const themeSwitcherCheck = toggle.querySelector('input[type="checkbox"]');
+							const theme = themeSwitcherCheck.checked ? 'dark' : 'light';
+							setStoredTheme(theme);
+							setTheme(theme);
+							showActiveTheme(theme);
 						});
 					});
 				})();
 			});
+
 			const gsearchModal = document.getElementById('gsearchModal');
 			const gsearchInput = document.getElementById('gsearchQueryInput');
 			gsearchModal.addEventListener('shown.bs.modal', () => {gsearchInput.focus();});
