--- a/a/s2025781117.html
+++ b/a/s2025781117.html
@@ -190,12 +190,12 @@
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
 									<div class="dropdown-menu" data-bs-popper="static">
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item active">Volume 2 (2026)</a></li>
+													<li><a href="/archive" class="dropdown-item active pe-auto">Volume 2 (2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
