--- a/apc.html
+++ b/apc.html
@@ -106,11 +106,11 @@
 									</div>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
 										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
-										<li><a href="/apc" class="dropdown-item active">Article Processing Charges</a></li>
+										<li><a href="/apc" class="dropdown-item active pe-auto">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
 										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
@@ -176,7 +176,7 @@
 						<h6 class="mb-3 fw-bold"><i class="bi bi-shield-check me-2"></i>Our Policies</h6>
 						<a href="/ethics" class="d-block mb-2 mobile-nav-link"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
 						<a href="/ai" class="d-block mb-2 mobile-nav-link"><i class="bi bi-cpu"></i> AI in Research</a>
-						<a href="/apc" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
+						<a href="/apc" class="d-block mb-2 mobile-nav-link active pe-auto"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
 						<a href="/review" class="d-block mb-2 mobile-nav-link"><i class="bi bi-people"></i> Peer Review Process</a>
 						<a href="/open-submission" class="d-block mb-2 mobile-nav-link"><i class="bi bi-door-open"></i> Open Submission</a>
 						<a href="/access" class="d-block mb-2 mobile-nav-link"><i class="bi bi-unlock"></i> Open Access & Licensing</a>
@@ -322,7 +322,7 @@
 													<ul>
 														<li>Low-income economies (World Bank classification)</li>
 														<li>Lower-middle-income economies with HDI below 0.65</li>
-														<li>Countries with active armed conflicts or humanitarian crises</li>
+														<li>Countries with active pe-auto armed conflicts or humanitarian crises</li>
 													</ul>
 													<p class="mb-0"><em>Automatic approval upon verification of institutional affiliation.</em></p>
 												</div>
