--- a/ethics.html
+++ b/ethics.html
@@ -106,9 +106,9 @@
 									</div>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
-										<li><a href="/ethics" class="dropdown-item active">Publication Ethics</a></li>
+										<li><a href="/ethics" class="dropdown-item active pe-auto">Publication Ethics</a></li>
 										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
@@ -174,7 +174,7 @@
 				<div class="offcanvas-body"> 
 					<div class="section-nav pt-0 mt-0">
 						<h6 class="mb-3 fw-bold"><i class="bi bi-shield-check me-2"></i>Our Policies</h6>
-						<a href="/ethics" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
+						<a href="/ethics" class="d-block mb-2 mobile-nav-link active pe-auto"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
 						<a href="/ai" class="d-block mb-2 mobile-nav-link"><i class="bi bi-cpu"></i> AI in Research</a>
 						<a href="/apc" class="d-block mb-2 mobile-nav-link"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
 						<a href="/review" class="d-block mb-2 mobile-nav-link"><i class="bi bi-people"></i> Peer Review Process</a>
