--- a/guidelines.html
+++ b/guidelines.html
@@ -75,7 +75,7 @@
 									<a href="/aims-scope" class="nav-link">Aims &amp; Scope</a>
 								</li>
 								<li class="nav-item">
-									<a href="/guidelines" class="nav-link active">Guidelines</a>
+									<a href="/guidelines" class="nav-link active pe-auto">Guidelines</a>
 								</li>
 								<li class="nav-item dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Submit</a>
@@ -531,7 +531,7 @@ Virtanen, P., et al. (2020). SciPy 1.0: Fundamental algorithms for scientific co
 									
 									<div class="alert alert-info mt-4" role="alert">
 										<h5 class="alert-heading"><i class="bi bi-info-circle me-2"></i>Reference Management</h5>
-										<p class="mb-0">Use reference managers (Zotero, Mendeley, EndNote) with APA 7th style. Verify all DOI links are active. For datasets, software, and other non-traditional outputs, include persistent identifiers (DOI, arXiv ID, GitHub permalink).</p>
+										<p class="mb-0">Use reference managers (Zotero, Mendeley, EndNote) with APA 7th style. Verify all DOI links are active pe-auto. For datasets, software, and other non-traditional outputs, include persistent identifiers (DOI, arXiv ID, GitHub permalink).</p>
 									</div>
 								</div>
 							</div>
