--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 									<i class="bi bi-quote display-6 flex-shrink-0 me-3"></i>
 									<div>
 										<h4 class="alert-heading">Inclusive Excellence</h4>
-										<p class="mb-0">SOLAV actively welcomes contributions from early-career researchers, independent scholars, practitioners, and established academics alike. We evaluate submissions based on intellectual contribution, methodological rigor, and relevance, not institutional pedigree or geography.</p>
+										<p class="mb-0">SOLAV active pe-autoly welcomes contributions from early-career researchers, independent scholars, practitioners, and established academics alike. We evaluate submissions based on intellectual contribution, methodological rigor, and relevance, not institutional pedigree or geography.</p>
 									</div>
 								</div>
 							</div>
@@ -383,7 +383,7 @@
 										Interdisciplinary Engagement
 									</h2>
 									<p class="fs-sm text-body mb-0">
-										SOLAV actively cultivates scholarship at disciplinary intersections. We provide dedicated space for work bridging <strong>engineering with life sciences, data science with social impact, or fundamental research with applied technology</strong>, where transformative insights emerge.
+										SOLAV active pe-autoly cultivates scholarship at disciplinary intersections. We provide dedicated space for work bridging <strong>engineering with life sciences, data science with social impact, or fundamental research with applied technology</strong>, where transformative insights emerge.
 									</p>
 								</div>
 							</a>
