--- a/oai-pmh.html
+++ b/oai-pmh.html
@@ -125,11 +125,11 @@
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">About</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">About</a>
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
 										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
-										<li><a href="/oai-pmh" class="dropdown-item active">OAI-PMH Repository</a></li>
+										<li><a href="/oai-pmh" class="dropdown-item active pe-auto">OAI-PMH Repository</a></li>
 										<li><a href="/faq" class="dropdown-item">Frequently Asked Questions</a></li>
 									</ul>
 								</li>
