--- a/research-integrity.html
+++ b/research-integrity.html
@@ -106,7 +106,7 @@
 									</div>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
 										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
@@ -120,7 +120,7 @@
 										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
 										<li><a href="/plagiarism" class="dropdown-item">Plagiarism</a></li>
 										<li><a href="/editorial" class="dropdown-item">Editorial</a></li>
-										<li><a href="/research-integrity" class="dropdown-item active">Research Integrity</a></li>
+										<li><a href="/research-integrity" class="dropdown-item active pe-auto">Research Integrity</a></li>
 										<li><a href="/copyright-licensing" class="dropdown-item">Copyright and Licensing</a></li>
 									</ul>
 								</li>
@@ -186,7 +186,7 @@
 						<a href="/conflict-of-interest" class="d-block mb-2 mobile-nav-link"><i class="bi bi-eye-slash"></i> Conflict of Interest</a>
 						<a href="/plagiarism" class="d-block mb-2 mobile-nav-link"><i class="bi bi-file-earmark-check"></i> Plagiarism</a>
 						<a href="/editorial" class="d-block mb-2 mobile-nav-link"><i class="bi bi-person-badge"></i> Editorial</a>
-						<a href="/research-integrity" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-shield-check"></i> Research Integrity</a>
+						<a href="/research-integrity" class="d-block mb-2 mobile-nav-link active pe-auto"><i class="bi bi-shield-check"></i> Research Integrity</a>
 						<a href="/copyright-licensing" class="d-block mb-2 mobile-nav-link"><i class="bi bi-c-circle"></i> Copyright & Licensing</a>
 						
 						<h6 class="mt-5 mb-3 fw-bold"><i class="bi bi-question-circle me-2"></i>Quick Links</h6>
