--- a/submit.html
+++ b/submit.html
@@ -76,10 +76,10 @@
 								<li class="nav-item">
 									<a href="/guidelines" class="nav-link">Guidelines</a>
 								</li>
-								<li class="nav-item dropdown active">
+								<li class="nav-item dropdown active pe-auto">
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Submit</a>
 									<ul class="dropdown-menu">
-										<li><a href="/submit" class="dropdown-item active">Submit</a></li>
+										<li><a href="/submit" class="dropdown-item active pe-auto">Submit</a></li>
 										<li><a href="/track" class="dropdown-item">Track Paper</a></li>
 									</ul>
 								</li>
