--- a/ai.html
+++ b/ai.html
@@ -106,10 +106,10 @@
 									</div>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
-										<li><a href="/ai" class="dropdown-item active">AI in Research</a></li>
+										<li><a href="/ai" class="dropdown-item active pe-auto">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
 										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
@@ -175,7 +175,7 @@
 					<div class="section-nav pt-0 mt-0">
 						<h6 class="mb-3 fw-bold"><i class="bi bi-shield-check me-2"></i>Our Policies</h6>
 						<a href="/ethics" class="d-block mb-2 mobile-nav-link"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
-						<a href="/ai" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-cpu"></i> AI in Research</a>
+						<a href="/ai" class="d-block mb-2 mobile-nav-link active pe-auto"><i class="bi bi-cpu"></i> AI in Research</a>
 						<a href="/apc" class="d-block mb-2 mobile-nav-link"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
 						<a href="/review" class="d-block mb-2 mobile-nav-link"><i class="bi bi-people"></i> Peer Review Process</a>
 						<a href="/open-submission" class="d-block mb-2 mobile-nav-link"><i class="bi bi-door-open"></i> Open Submission</a>
@@ -473,7 +473,7 @@ AI Disclosure: The authors used DeepSeek for statistical analysis suggestions an
 											<ol>
 												<li><strong>Content Verification:</strong> All AI-generated content must be thoroughly verified for accuracy, appropriateness, and originality</li>
 												<li><strong>Source Validation:</strong> Verify all AI-suggested references and citations actually exist and are correctly attributed</li>
-												<li><strong>Bias Checking:</strong> Actively identify and correct any biases introduced by AI tools</li>
+												<li><strong>Bias Checking:</strong> active pe-autoly identify and correct any biases introduced by AI tools</li>
 												<li><strong>Methodological Soundness:</strong> Ensure AI-assisted methods are scientifically valid and reproducible</li>
 												<li><strong>Intellectual Contribution:</strong> Maintain clear documentation of human vs. AI contributions</li>
 												<li><strong>Error Responsibility:</strong> Authors bear full responsibility for any errors in AI-generated content</li>
