--- a/aims-scope.html
+++ b/aims-scope.html
@@ -71,7 +71,7 @@
 						<div class="offcanvas-body">
 							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 								<li class="nav-item">
-									<a href="/aims-scope" class="nav-link active">Aims &amp; Scope</a>
+									<a href="/aims-scope" class="nav-link active pe-auto">Aims &amp; Scope</a>
 								</li>
 								<li class="nav-item">
 									<a href="/guidelines" class="nav-link">Guidelines</a>
