--- a/archive2025.html
+++ b/archive2025.html
@@ -87,7 +87,7 @@
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
 									<div class="dropdown-menu" data-bs-popper="static">
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
@@ -101,7 +101,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item active">Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item active pe-auto">Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
