--- a/authors.html
+++ b/authors.html
@@ -87,14 +87,14 @@
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-expanded="true">Archive</a>
 									<div class="dropdown-menu" data-bs-popper="static">
 										<div class="d-lg-flex pt-lg-3">
 											<div class="mega-dropdown-column">
 												<ul class="list-unstyled mb-3">
 													<li><a href="/archive" class="dropdown-item">Volume 2 (2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
-													<li><a href="/authors" class="dropdown-item active">Authors</a></li>
+													<li><a href="/authors" class="dropdown-item active pe-auto">Authors</a></li>
 												</ul>
 											</div>
 											<div class="mega-dropdown-column">
