--- a/corrections-retractions.html
+++ b/corrections-retractions.html
@@ -106,7 +106,7 @@
 									</div>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
 										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
@@ -115,7 +115,7 @@
 										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
-										<li><a href="/corrections-retractions" class="dropdown-item active">Corrections, Retractions & Withdrawal</a></li>
+										<li><a href="/corrections-retractions" class="dropdown-item active pe-auto">Corrections, Retractions & Withdrawal</a></li>
 										<li><a href="/appeals-complaints" class="dropdown-item">Appeals & Complaints</a></li>
 										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
 										<li><a href="/plagiarism" class="dropdown-item">Plagiarism</a></li>
@@ -181,7 +181,7 @@
 						<a href="/open-submission" class="d-block mb-2 mobile-nav-link"><i class="bi bi-door-open"></i> Open Submission</a>
 						<a href="/access" class="d-block mb-2 mobile-nav-link"><i class="bi bi-unlock"></i> Open Access & Licensing</a>
 						<a href="/archiving" class="d-block mb-2 mobile-nav-link"><i class="bi bi-server"></i> Archiving & Management</a>
-						<a href="/corrections-retractions" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-exclamation-triangle"></i> Corrections & Retractions</a>
+						<a href="/corrections-retractions" class="d-block mb-2 mobile-nav-link active pe-auto"><i class="bi bi-exclamation-triangle"></i> Corrections & Retractions</a>
 						<a href="/appeals-complaints" class="d-block mb-2 mobile-nav-link"><i class="bi bi-chat-square-text"></i> Appeals & Complaints</a>
 						<a href="/conflict-of-interest" class="d-block mb-2 mobile-nav-link"><i class="bi bi-eye-slash"></i> Conflict of Interest</a>
 						<a href="/plagiarism" class="d-block mb-2 mobile-nav-link"><i class="bi bi-file-earmark-check"></i> Plagiarism</a>
