--- a/plagiarism.html
+++ b/plagiarism.html
@@ -106,7 +106,7 @@
 									</div>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
 										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
@@ -118,7 +118,7 @@
 										<li><a href="/corrections-retractions" class="dropdown-item">Corrections, Retractions & Withdrawal</a></li>
 										<li><a href="/appeals-complaints" class="dropdown-item">Appeals & Complaints</a></li>
 										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
-										<li><a href="/plagiarism" class="dropdown-item active">Plagiarism</a></li>
+										<li><a href="/plagiarism" class="dropdown-item active pe-auto">Plagiarism</a></li>
 										<li><a href="/editorial" class="dropdown-item">Editorial</a></li>
 										<li><a href="/research-integrity" class="dropdown-item">Research Integrity</a></li>
 										<li><a href="/copyright-licensing" class="dropdown-item">Copyright and Licensing</a></li>
@@ -184,7 +184,7 @@
 						<a href="/corrections-retractions" class="d-block mb-2 mobile-nav-link"><i class="bi bi-exclamation-triangle"></i> Corrections & Retractions</a>
 						<a href="/appeals-complaints" class="d-block mb-2 mobile-nav-link"><i class="bi bi-chat-square-text"></i> Appeals & Complaints</a>
 						<a href="/conflict-of-interest" class="d-block mb-2 mobile-nav-link"><i class="bi bi-eye-slash"></i> Conflict of Interest</a>
-						<a href="/plagiarism" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-file-earmark-check"></i> Plagiarism</a>
+						<a href="/plagiarism" class="d-block mb-2 mobile-nav-link active pe-auto"><i class="bi bi-file-earmark-check"></i> Plagiarism</a>
 						<a href="/editorial" class="d-block mb-2 mobile-nav-link"><i class="bi bi-person-badge"></i> Editorial</a>
 						<a href="/research-integrity" class="d-block mb-2 mobile-nav-link"><i class="bi bi-shield-check"></i> Research Integrity</a>
 						<a href="/copyright-licensing" class="d-block mb-2 mobile-nav-link"><i class="bi bi-c-circle"></i> Copyright & Licensing</a>
