--- a/review.html
+++ b/review.html
@@ -106,12 +106,12 @@
 									</div>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
 										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
-										<li><a href="/review" class="dropdown-item active">Peer Review Process</a></li>
+										<li><a href="/review" class="dropdown-item active pe-auto">Peer Review Process</a></li>
 										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
@@ -177,7 +177,7 @@
 						<a href="/ethics" class="d-block mb-2 mobile-nav-link"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
 						<a href="/ai" class="d-block mb-2 mobile-nav-link"><i class="bi bi-cpu-exchange"></i> AI in Research</a>
 						<a href="/apc" class="d-block mb-2 mobile-nav-link"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
-						<a href="/review" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-people"></i> Peer Review Process</a>
+						<a href="/review" class="d-block mb-2 mobile-nav-link active pe-auto"><i class="bi bi-people"></i> Peer Review Process</a>
 						<a href="/open-submission" class="d-block mb-2 mobile-nav-link"><i class="bi bi-door-open"></i> Open Submission</a>
 						<a href="/access" class="d-block mb-2 mobile-nav-link"><i class="bi bi-unlock"></i> Open Access & Licensing</a>
 						<a href="/archiving" class="d-block mb-2 mobile-nav-link"><i class="bi bi-server"></i> Archiving & Management</a>
@@ -336,7 +336,7 @@
 										<div class="card-body p-4">
 											<h3 class="h4 mb-3"><i class="bi bi-check2-circle text-primary me-2"></i>Quality Assurance</h3>
 											<ul class="mb-0">
-												<li>All reviewers are active researchers in relevant fields</li>
+												<li>All reviewers are active pe-auto researchers in relevant fields</li>
 												<li>Minimum of 2 reviewers per manuscript</li>
 												<li>Third reviewer sought for conflicting recommendations</li>
 												<li>Editorial board provides final quality oversight</li>
