--- a/track.html
+++ b/track.html
@@ -76,11 +76,11 @@
 								<li class="nav-item">
 									<a href="/guidelines" class="nav-link">Guidelines</a>
 								</li>
-								<li class="nav-item dropdown active">
+								<li class="nav-item dropdown active pe-auto">
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Submit</a>
 									<ul class="dropdown-menu">
 										<li><a href="/submit" class="dropdown-item">Submit</a></li>
-										<li><a href="/track" class="dropdown-item active">Track Paper</a></li>
+										<li><a href="/track" class="dropdown-item active pe-auto">Track Paper</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
