--- a/a/s2026781202.html
+++ b/a/s2026781202.html
@@ -258,6 +258,11 @@
 							<div class="mb-4">
 								<span class="badge bg-primary metadata-badge">
 									<i class="bi bi-file-earmark-text me-1"></i> Editorial</span>
+								<div class="d-md-none btn-group btn-group-sm" role="group" aria-label="Small button group">
+									<a href="#dcds" class="btn-sm py-1 btn btn-outline-primary fs-sm text-decoration-none"><i class="bi bi-download"></i></a>
+									<a href="#dcds" class="btn-sm py-1 btn btn-outline-primary fs-sm text-decoration-none"><i class="bi bi-quote"></i></a>
+									<a href="#dcds" class="btn-sm py-1 btn btn-outline-primary fs-sm text-decoration-none"><i class="bi bi-info-circle"></i></a>
+								</div>
 							</div>
 						</div>
 						
@@ -304,7 +309,7 @@
 						<div class="references-box mt-4 mb-4"><h3 class="h5 mb-3"><i class="bi bi-bookmarks me-2"></i>References</h3><ol class="references-list"><li class="mb-2">Toderas, M. (2025). Artificial intelligence for sustainability: A systematic review and critical analysis. Sustainability, 17(17), 8049. https://doi.org/10.3390/su17178049</li><li class="mb-2">Fan, Z., Yan, Z., &amp; Wen, S. (2023). Deep learning in sustainability. Sustainability, 15(18), 13493. https://doi.org/10.3390/su151813493</li><li class="mb-2">Vega, J. (2026). Rethinking AI in the age of climate collapse. arXiv. https://arxiv.org/abs/2601.18462</li><li class="mb-2">Rohde, F., Wagner, J., Meyer, A., et al. (2023). Broadening the perspective for sustainable AI. arXiv. https://arxiv.org/abs/2306.13686</li><li class="mb-2">Umunnawuike, C., et al. (2025). Responsible AI governance. SPE Conference.</li><li class="mb-2">Floridi, L., et al. (2018). AI4People. Minds and Machines, 28, 689–707.</li><li class="mb-2">Alsaigh, R., Mehmood, R., &amp; Katib, I. (2023). AI in smart energy systems. Frontiers in Energy Research.</li><li class="mb-2">Jean, N., et al. (2016). Satellite imagery and poverty. Science, 353, 790–794.</li><li class="mb-2">Kitchin, R. (2014). The data revolution. Sage.</li><li class="mb-2">Jobin, A., Ienca, M., &amp; Vayena, E. (2019). Global AI ethics guidelines. Nature Machine Intelligence, 1, 389–399.</li><li class="mb-2">Lazer, D., et al. (2020). Computational social science. Science, 369, 1060–1062.</li><li class="mb-2">Graham, M., et al. (2019). Digital divides. Geoforum, 99, 1–5.</li></ol></div>
 					</div>
 
-					<div class="col-lg-4">
+					<div class="col-lg-4" id="dcds">
 						<div class="article-actions">
 							<div class="card mb-4">
 								<div class="card-body">
@@ -325,7 +330,7 @@
 							
 							<div class="card">
 								<div class="card-header bg-secondary text-center p-0 m-0 w-100">
-									<h5 class="mb-0 p-3"><i class="bi bi-info-circle me-2"></i>Article Info</h5>
+									<h5 class="mb-0 p-3 py-1"><i class="bi bi-info-circle me-2"></i>Article Info</h5>
 								</div>
 								<div class="card-body">
 									<ul class="list-unstyled mb-0">
