--- a/a/s2025781101.html
+++ b/a/s2025781101.html
@@ -335,9 +335,13 @@
 										<li class="mb-2">
 											<i class="bi bi-journal text-primary me-2"></i><strong>Volume:</strong> 1
 										</li>
-										<li>
+										<li class="mb-2">
 											<i class="bi bi-clock-history text-primary me-2"></i><strong>Version:</strong> 2025-02-02 (1)
 										</li>
+										<li>
+											<i class="bi bi-c-circle text-primary me-2"></i><strong>License:</strong> This work is licensed under a <a rel="license" target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+										</li>
+										
 									</ul>
 								</div>
 							</div>
@@ -347,9 +351,9 @@
 			</div>
 			
 			<div class="col-md-12 d-flex justify-content-evenly mb-3 border-top mt-3 pt-3">
-				<img src="/images/creative_commons_license_with_attribution.svg" alt="CC BY 4.0" class="img-fluid" style="max-height: 46px;">
-				<img src="/images/open_access.svg" alt="Open Access" class="img-fluid" style="max-height: 46px;">
-				<img src="/images/oai_logo.svg" alt="OAI-PMH Compliant" class="img-fluid" style="max-height: 46px;">
+				<img src="/images/creative_commons_license_with_attribution.svg" alt="Creative Commons Attribution 4.0 International License (CC BY 4.0)" title="Licensed under Creative Commons Attribution 4.0 International (CC BY 4.0)" class="img-fluid" style="max-height: 46px;">
+				<img src="/images/open_access.svg" alt="Gold Open Access Journal" title="Gold Open Access Journal (Free to Read, Reuse, and Share)" class="img-fluid" style="max-height: 46px;">
+				<img src="/images/oai_logo.svg" alt="OAI-PMH Compliant Metadata Provider" title="OAI-PMH Compliant Metadata Provider" class="img-fluid" style="max-height: 46px;">
 			</div>
 		</main>
 		<div class="modal fade" id="gsearchModal" tabindex="-1" aria-hidden="true">
