--- a/archiving.html
+++ b/archiving.html
@@ -577,9 +577,9 @@
 				</div>
 			</div>
 			<div class="col-md-12 d-flex justify-content-evenly mb-3 border-top mt-3 pt-3">
-				<img src="/images/creative_commons_license_with_attribution.svg" alt="CC BY 4.0" class="img-fluid" style="max-height: 46px;">
-				<img src="/images/open_access.svg" alt="Open Access" class="img-fluid" style="max-height: 46px;">
-				<img src="/images/oai_logo.svg" alt="OAI-PMH Compliant" class="img-fluid" style="max-height: 46px;">
+				<img src="/images/creative_commons_license_with_attribution.svg" alt="Creative Commons Attribution 4.0 International License (CC BY 4.0)" title="Licensed under Creative Commons Attribution 4.0 International (CC BY 4.0)" class="img-fluid" style="max-height: 46px;">
+				<img src="/images/open_access.svg" alt="Gold Open Access Journal" title="Gold Open Access Journal (Free to Read, Reuse, and Share)" class="img-fluid" style="max-height: 46px;">
+				<img src="/images/oai_logo.svg" alt="OAI-PMH Compliant Metadata Provider" title="OAI-PMH Compliant Metadata Provider" class="img-fluid" style="max-height: 46px;">
 			</div>
 		</main>
 		<div class="modal fade" id="gsearchModal" tabindex="-1" aria-hidden="true">
