--- a/about.html
+++ b/about.html
@@ -645,9 +645,17 @@
 				</section>
 			</div>
 			<div class="col-md-12 d-flex justify-content-evenly mb-3 border-top mt-3 pt-3">
-				<img src="/images/creative_commons_license_with_attribution.svg" alt="Creative Commons Attribution 4.0 International License (CC BY 4.0)" title="Licensed under Creative Commons Attribution 4.0 International (CC BY 4.0)" class="img-fluid" style="max-height: 46px;">
-				<img src="/images/open_access.svg" alt="Gold Open Access Journal" title="Gold Open Access Journal (Free to Read, Reuse, and Share)" class="img-fluid" style="max-height: 46px;">
-				<img src="/images/oai_logo.svg" alt="OAI-PMH Compliant Metadata Provider" title="OAI-PMH Compliant Metadata Provider" class="img-fluid" style="max-height: 46px;">
+				<a href="/access" title="View Open Access & Licensing Policy" class="text-decoration-none"> <img src="/images/creative_commons_license_with_attribution.svg" alt="Creative Commons Attribution 4.0 International License (CC BY 4.0)" class="img-fluid" style="max-height: 46px;"></a>
+				<a href="/copyright-licensing" title="Why SOLAV is Truly Open Access" class="text-decoration-none"><img src="/images/open_access.svg" alt="Gold Open Access Journal" class="img-fluid" style="max-height: 46px;"></a>
+				<a href="/oai-pmh" title="OAI-PMH Metadata Harvesting Details" class="text-decoration-none"><img src="/images/oai_logo.svg" alt="OAI-PMH Compliant Metadata Provider" class="img-fluid" style="max-height: 46px;"></a>
+			</div>
+			<div class="col-md-12 text-center mb-3 mt-2">
+				<a href="https://publicationethics.org/core-practices" target="_blank" rel="noopener" 
+					class="text-muted text-decoration-none" 
+					title="SOLAV follows COPE Core Practices for publication ethics">
+					<small class="ms-1 text-xs">Adheres to <strong>COPE Core Practices</strong></small>
+					<span class="ms-1"><i class="bi bi-box-arrow-up-right text-xs"></i></span>
+				</a>
 			</div>
 		</main>
 		<div class="modal fade" id="gsearchModal" tabindex="-1" aria-hidden="true">
@@ -732,7 +740,6 @@
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
 							<span class="issn-text">ISSN request pending</span>
 						</div>
-						<small class="text-muted text-xs">Adheres to Committee on Publication Ethics (COPE) Core Practices</small>
 					</div>
 
 					<div class="col-lg-2 col-md-4">
